Small styling fix (gap between import and export button on windows)

--- a/public/css/_escrito.less
+++ b/public/css/_escrito.less
@@ -83,8 +83,9 @@
     padding-top: 1px;
     right: 60px;
   }
-  .ie9 #toolbar #export-menu {
-    right: 63px; /* Small ie hack with modernizr */
+  #import-button, .export-menu {
+    min-width: 35px;
+    text-align: center;
   }
   #toolbar .print-button {
     position: absolute;
