--- a/public/css/_menus.less
+++ b/public/css/_menus.less
@@ -10,7 +10,7 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    font-family: 'Lucida Grande', sans-serif;
+    font-family: 'Lucida Grande', helvetica, arial, sans-serif;
   }
 
   div.menu {
@@ -63,7 +63,7 @@
     border-radius: 2px;
 
     color: #333;
-    font: 11px/20px 'Lucida Grande', sans-serif;
+    font: 11px/20px 'Lucida Grande', helvetica, arial, sans-serif;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 
     -webkit-background-clip: padding-box;
